# distributed-library

./: Caddyfile  Cargo.toml  Dockerfile  README.md  cli.py  docker-compose.yml  docker-tmuxp.yml  go.mod  go.sum  justfile  log.toml  main.go  pyproject.toml  requirements.txt  tmuxp.yml
.github/workflows/: build.yml
cmd/: parse.go  root.go
core/: parse.go  structs.go
frontend/: Dockerfile  index.html  justfile  package-lock.json  package.json
frontend/public/: site.webmanifest
frontend/src/: api-types.ts  error-handler.tsx  index.css  main.tsx
frontend/src/components/: Action.tsx  Book.tsx  User.tsx
frontend/src/routes/: actions.tsx  books.tsx  index.tsx  root.tsx  users.tsx
src/: main.rs
