[tool.poetry]
name = "fogo-sh-distributed-library"
version = "0.1.0"
description = "your friends have books, therefore you do too"
authors = ["Jack Arthur Harrhy <me@jackharrhy.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
