[tool.poetry]
name = "fogo-sh-distributed-library"
version = "0.1.0"
description = "your friends have books, therefore you do too"
authors = ["Jack Arthur Harrhy <me@jackharrhy.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
toml = "^0.10.2"
typer = "^0.6.1"
devtools = "^0.9.0"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
